# racunarska-grafika-domaci1

./: CMakeLists.txt  README.md  flake.nix
.cache/clangd/index/: _fixes.hpp.C7FC89C451387982.idx  _vectorize.hpp.B22040FA59DCD18D.idx  common.hpp.5309E2659AA1F31A.idx  compute_common.hpp.E6939E6E1142AE09.idx  compute_vector_decl.hpp.6AC863636159C83B.idx  compute_vector_relational.hpp.05C3CF175914B0E2.idx  constants.hpp.9BF64ABDC68B92EC.idx  constants.inl.202F59DC095A75F5.idx  epsilon.hpp.AD4C1D49B96B0554.idx  epsilon.inl.18F9587FEB8CCEF7.idx  exponential.hpp.FF85310190351359.idx  framebuffer.cpp.237EE3C3DD45660D.idx  framebuffer.hpp.2F560525D02EADBA.idx  func_common.inl.E13DB9F41CE13CED.idx  func_exponential.inl.7501E4B5F4BB11AD.idx  func_geometric.inl.FC3F1A5E228357A1.idx  func_integer.inl.8DF62F3A287046FA.idx  func_matrix.inl.A574629B2C509F06.idx  func_packing.inl.FB9CA370922A3F95.idx  func_trigonometric.inl.B8BB3025C75D74D1.idx  func_vector_relational.inl.2F4EB4E6612EAFC5.idx  fwd.hpp.813AE749D53644DC.idx  game.cpp.2C101B9AF9269CB2.idx  game.hpp.497A21882E91BE57.idx  geometric.hpp.F9A2E1DA624FDAD5.idx  gl.c.4E5CC624EFDC0E66.idx  gl.c.66B8D32CDD706437.idx  gl.h.65181FC2FF9232D6.idx  gl.h.B9D4B0447C55B33D.idx  glm.hpp.3ABA445F18FB6E7F.idx  integer.hpp.BB6687E5A9D7C282.idx  khrplatform.h.76146CFB168B9559.idx  khrplatform.h.9E6435348C988230.idx  level1.cpp.26E6E56B9934222B.idx  level1.hpp.962C6798A457A41D.idx  level2.cpp.B08F2D0F47A757ED.idx  level2.hpp.8562A4CCA170A863.idx  level3.cpp.C3C2BCF7FDFFE4AF.idx  level3.hpp.30324C6FE0A25110.idx  level4.cpp.04B5BF549C8C88E8.idx  (+173 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8098b5v4ikzi7mzg5ssxlw4x1f0ycnmg-source  gsrsm202dqrmr5dmwwh430nz47lblq4r-source  jd3y5kfy3ywv9lc229nz8vxqbrcyv93d-source  rcsmdj802sk3w9l8m0b0bvdy0jiw2wgr-source
include/: framebuffer.hpp  game.hpp  level1.hpp  level2.hpp  level3.hpp  level4.hpp  player.hpp  shader.hpp  sprite.hpp  stage.hpp
include/glad/: gl.h
src/: framebuffer.cpp  game.cpp  level1.cpp  level2.cpp  level3.cpp  level4.cpp  main.cpp  player.cpp  sprite.cpp
src/shaders/: blur_fragment.glsl  fragment.glsl  rainbow_fragment.glsl  sin_fragment.glsl  sprite_vertex.glsl  vertex.glsl
